--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"
+
     <title>Matcha Madness</title>
 </head>
 <body>
@@ -29,8 +30,9 @@
 
 <div class="randomGame">
     <form id="guess-form">
-        <label for="user-guess">Enter a number between 1 and 100:</label><br>
+        <label for="user-guess">Enter a number between 1 and 10:</label><br>
         <input type="number" id="user-guess" name="user-guess" min="1" max="100" required><br><br>
+        <divg id="result"></div>
         <input type="submit" value="Submit Guess">
     </form>
 </div>
@@ -67,5 +69,6 @@
 </form>
 
 </footer>
+<script src="main.js" defer></script>
 </body>
 </html>
