--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="styles.css">
 
     <title>Matcha Madness</title>
 </head>
@@ -16,15 +16,18 @@
 
 <div class="productDisplay">
     <div id=productOne>
-        <img src="C:\Users\thoma\OneDrive\Desktop\GIT 417 Adv Web Markup and Scripting\Images\img_1.jpg" alt="Milk Matcha">
+        <img src="Images/img_1.jpg" alt="Milk Matcha">
+        <p>Our original matcha: made with fresh matcha latte'd with your choice of milk for a rich and smooth flavor or sweet matcha.</p>
     </div>
 
     <div id="productTwo">
-        <img src="C:\Users\thoma\OneDrive\Desktop\GIT 417 Adv Web Markup and Scripting\Images\img_2.jpg" alt="Strawberry Matcha">
+        <img src="Images/img_2.jpg" alt="Strawberry Matcha">
+        <p>Our original matcha with a twist of strawberry filing and flavor. Adds a fresh and flavorful twist to our original matcha blend.</p>
     </div>
 
     <div id="productThree">
-        <img src="C:\Users\thoma\OneDrive\Desktop\GIT 417 Adv Web Markup and Scripting\Images\img_3.jpg" alt="Ube Matcha">
+        <img src="Images/img_3.jpg" alt="Ube Matcha">
+    <p>Our newest creation of ube and matcha to create a lavender matcha that is both sweet and refreshing.</p>
     </div>
 </div>
 
@@ -32,7 +35,7 @@
     <form id="guess-form">
         <label for="user-guess">Enter a number between 1 and 10:</label><br>
         <input type="number" id="user-guess" name="user-guess" min="1" max="100" required><br><br>
-        <divg id="result"></div>
+        <div id="result"></div>
         <input type="submit" value="Submit Guess">
     </form>
 </div>
