--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
     <title>Matcha Madness</title>
 </head>
 <body>
+<!-- experimental for product display -->
+
 <header>
     <h2 class="title">Where Madness meets the Matcha</h2>
     <h2 class = "title">Matcha Madness</h2>
+    <nav class="product-nav">
+        <button data-index="0">Milk Matcha</button>
+        <button data-index="1">Strawberry Matcha</button>
+        <button data-index="2">Ube Matcha</button>
+    </nav>
 </header>
 <main>
 
